# Personal-AI-Agent

./: .env.example  LICENSE  README.md  pyproject.toml
src/personal_ai_agent/: __init__.py  config.py  main.py
src/personal_ai_agent/telegram/: __init__.py  client.py  handlers.py  models.py  service.py
tests/: test_api.py  test_handlers.py  test_service.py  test_telegram_client.py
