[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-agent"
version = "0.1.0"
description = "Telegram-first personal AI agent backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.8,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.26,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
asyncio_mode = "auto"
